--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "node ./node_modules/vite/bin/vite.js build",
+    "build:fallback": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -16,7 +17,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.84.1",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.0.3",
     "axios": "^1.6.0",
     "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
@@ -35,7 +36,7 @@
     "react-to-print": "^3.1.1",
     "recharts": "^3.1.0",
     "tailwind-merge": "^3.3.1",
-    "vite": "^5.0.8",
+    "vite": "^4.5.3",
     "xlsx": "^0.18.5",
     "zod": "^4.0.14"
   },
